src/monitor-tuning/08/ext-assets/k8s/springboot-demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-demo-service
spec:
  type: NodePort # 这里如果不配置 就会设置:ClusterIP类型   NodePort:对外暴露服务, ClusterIP:集群内部，不对外暴露接口
  ports:
    - port: 81
      protocol: TCP
      targetPort: 8888 # 应用端口
  selector:
    app: springboot-demo
